# reinanbr_site

./: .gitignore  LICENSE  README.md  config.py  db.json  flask_app.py  main.py  pyproject.toml  test_db_json.py
src/: app.py
src/controllers/: home_controller.py
src/controllers/apis/: blueprint_api_config.py  monitoring_api_controller.py  return_info_api_controller.py
src/views/: base.html
src/views/home/: __init__.py  home.py
src/views/home/static/js/: main.js  spartacus.js
src/views/home/templates/: index.html
tools/db/json/: __init__.py  db_json.py
tools/web/: get_info_access.py
