[tool.poetry]
name = "reinanbr-site"
version = "0.0.1"
description = "my portoflio site"
authors = ["reinanbr <perseu912@gmail.com>"]
license = "bsd-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
flask-restful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
